<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>io.github.codesapienbe.springvision</groupId>
    <artifactId>spring-vision</artifactId>
    <version>1.0.6</version>
  </parent>

  <artifactId>core</artifactId>
  <name>Spring Vision -> Core</name>
  <description>Core domain classes and interfaces for Spring Vision</description>

  <properties>
    <docker.image.name>spring-vision-base:${project.version}</docker.image.name>
  </properties>

  <dependencies>
    <!-- Spring Boot Starter -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>

    <!-- Spring Boot Actuator for health indicators -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <optional>true</optional>
    </dependency>

    <!-- Spring WebFlux for reactive HTTP client -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webflux</artifactId>
    </dependency>

    <!-- SLF4J API -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>

    <!-- Jackson Databind for JSON parsing in REST client -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>

    <!-- JUnit 5 for testing -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- JUnit 5 Engine -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- JUnit Platform Suite API for test suites -->
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-suite-api</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- JUnit Platform Suite Engine for running test suites -->
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-suite-engine</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- Spring Boot Test Starter -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- Micrometer for metrics -->
    <dependency>
      <groupId>io.micrometer</groupId>
      <artifactId>micrometer-core</artifactId>
      <version>1.12.0</version>
    </dependency>

    <!-- Micrometer registry -->
    <dependency>
      <groupId>io.micrometer</groupId>
      <artifactId>micrometer-registry-prometheus</artifactId>
      <version>1.12.0</version>
    </dependency>

    <!-- Javax annotation API -->
    <dependency>
      <groupId>javax.annotation</groupId>
      <artifactId>javax.annotation-api</artifactId>
      <version>1.3.2</version>
    </dependency>

    <!-- Logback JSON encoder for structured logging -->
    <dependency>
      <groupId>net.logstash.logback</groupId>
      <artifactId>logstash-logback-encoder</artifactId>
      <version>7.4</version>
    </dependency>

    <!-- HNSW library via JNA - correct Maven coordinates -->
    <dependency>
      <groupId>com.stepstone.search.hnswlib.jna</groupId>
      <artifactId>hnswlib-jna</artifactId>
      <version>1.4.2</version>
    </dependency>

    <!-- Chronicle Map for high-performance key-value storage -->
    <dependency>
      <groupId>net.openhft</groupId>
      <artifactId>chronicle-map</artifactId>
      <version>3.24ea4</version>
    </dependency>

    <!-- LZ4 compression for efficient index storage -->
    <dependency>
      <groupId>org.lz4</groupId>
      <artifactId>lz4-java</artifactId>
      <version>1.8.0</version>
    </dependency>
    <!-- ZXing barcode detection -->
    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>core</artifactId>
      <version>3.5.1</version>
    </dependency>
    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>javase</artifactId>
      <version>3.5.1</version>
    </dependency>
    <!-- Metadata Extractor for EXIF data -->
    <dependency>
      <groupId>com.drewnoakes</groupId>
      <artifactId>metadata-extractor</artifactId>
      <version>2.19.0</version>
    </dependency>

    <!-- ONNX Runtime for CPU (default profile) -->
    <dependency>
      <groupId>com.microsoft.onnxruntime</groupId>
      <artifactId>onnxruntime</artifactId>
      <optional>true</optional>
    </dependency>

    <!-- Tesseract OCR (migrated from tesseract module) -->
    <dependency>
      <groupId>net.sourceforge.tess4j</groupId>
      <artifactId>tess4j</artifactId>
      <version>5.9.0</version>
      <optional>true</optional>
    </dependency>

    <!-- OpenPnP OpenCV for YOLO (migrated from yolo module) -->
    <dependency>
      <groupId>org.openpnp</groupId>
      <artifactId>opencv</artifactId>
      <version>4.9.0-0</version>
      <optional>true</optional>
    </dependency>

    <!-- Apache Commons Math3 for mathematical operations -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <optional>true</optional>
    </dependency>

    <!-- DJL API (default backend) -->
    <dependency>
      <groupId>ai.djl</groupId>
      <artifactId>api</artifactId>
    </dependency>

    <!-- DJL Model Zoo -->
    <dependency>
      <groupId>ai.djl</groupId>
      <artifactId>model-zoo</artifactId>
    </dependency>

    <!-- DJL PyTorch Engine (for face detection and recognition models) -->
    <dependency>
      <groupId>ai.djl.pytorch</groupId>
      <artifactId>pytorch-engine</artifactId>
    </dependency>

    <!-- DJL TensorFlow Engine (for object detection models) -->
    <dependency>
      <groupId>ai.djl.tensorflow</groupId>
      <artifactId>tensorflow-engine</artifactId>
    </dependency>

    <!-- DJL PyTorch Model Zoo -->
    <dependency>
      <groupId>ai.djl.pytorch</groupId>
      <artifactId>pytorch-model-zoo</artifactId>
    </dependency>

    <!-- DJL PyTorch Native Auto (auto-selects platform) -->
    <dependency>
      <groupId>ai.djl.pytorch</groupId>
      <artifactId>pytorch-native-auto</artifactId>
      <scope>runtime</scope>
    </dependency>

    <!-- Add an explicit platform-specific PyTorch native library to avoid runtime JNI download in containers -->
    <dependency>
      <groupId>ai.djl.pytorch</groupId>
      <artifactId>pytorch-native-cpu</artifactId>
      <version>${pytorch.version}</version>
      <classifier>linux-x86_64</classifier>
      <scope>runtime</scope>
    </dependency>

    <!-- DJL OpenCV support -->
    <dependency>
      <groupId>ai.djl.opencv</groupId>
      <artifactId>opencv</artifactId>
    </dependency>

    <!-- DJL ONNX Runtime Engine (for ONNX models) -->
    <dependency>
      <groupId>ai.djl.onnxruntime</groupId>
      <artifactId>onnxruntime-engine</artifactId>
      <optional>true</optional>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <!-- Include standard src/main/resources -->
      <resource>
        <directory>src/main/resources</directory>
        <filtering>false</filtering>
      </resource>
    </resources>

    <plugins>
      <!-- Maven Compiler Plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>

      <!-- Maven JAR Plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.1</version>
      </plugin>

      <!-- Maven Surefire Plugin for running tests -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>

      <!-- Build the module's Dockerfile (mcp/Dockerfile) with the fabric8 docker-maven-plugin -->
      <plugin>
        <groupId>io.fabric8</groupId>
        <artifactId>docker-maven-plugin</artifactId>
        <version>0.40.1</version>
        <configuration>
          <images>
            <image>
              <name>${docker.image.name}</name>
              <build>
                <!-- Dockerfile is placed in the mcp module directory -->
                <dockerFileDir>${project.basedir}</dockerFileDir>
                <dockerFile>Dockerfile</dockerFile>
                <tags>
                  <tag>${project.version}</tag>
                </tags>
              </build>
            </image>
          </images>
        </configuration>
        <executions>
          <execution>
            <id>docker-build</id>
            <phase>install</phase>
            <goals>
              <goal>build</goal>
            </goals>
            <configuration>
              <!-- Allow skipping Docker build via -DskipDockerBuild=true -->
              <skip>${skipDockerBuild}</skip>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

  <!-- Profiles for CPU vs GPU ONNX Runtime -->
  <profiles>
    <!-- CPU Profile (Active by Default) -->
    <profile>
      <id>cpu</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <onnxruntime.provider>cpu</onnxruntime.provider>
      </properties>
    </profile>

    <!-- GPU Profile (CUDA-enabled) -->
    <profile>
      <id>gpu</id>
      <properties>
        <onnxruntime.provider>gpu</onnxruntime.provider>
      </properties>
      <dependencies>
        <!-- Replace CPU runtime with GPU runtime -->
        <dependency>
          <groupId>com.microsoft.onnxruntime</groupId>
          <artifactId>onnxruntime_gpu</artifactId>
        </dependency>
      </dependencies>
    </profile>

    <!-- Legacy/backends profile: opt-in profile for legacy JavaCV/OpenCV native artifacts.
         Activate with -Plegacy-backends to include JavaCV/OpenCV/OpenBLAS artifacts when you
         need to run the old OpenCV-based backends. Kept opt-in to avoid accidental native blobs
         in standard builds.
    -->
    <profile>
      <id>legacy-backends</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.bytedeco</groupId>
          <artifactId>javacv</artifactId>
          <version>${javacv.version}</version>
          <optional>true</optional>
        </dependency>
        <dependency>
          <groupId>org.bytedeco</groupId>
          <artifactId>opencv</artifactId>
          <version>${opencv.version}</version>
          <classifier>${opencv.classifier}</classifier>
          <scope>runtime</scope>
          <optional>true</optional>
        </dependency>
        <dependency>
          <groupId>org.bytedeco</groupId>
          <artifactId>openblas</artifactId>
          <version>0.3.26-1.5.10</version>
          <classifier>${opencv.classifier}</classifier>
          <scope>runtime</scope>
          <optional>true</optional>
        </dependency>
      </dependencies>
    </profile>
  </profiles>
</project>
